src/test/ui-fulldeps/plugin-as-extern-crate.stderr
error: compiler plugin used as an ordinary library
  --> $DIR/plugin-as-extern-crate.rs:9:1
   |
LL | extern crate empty_plugin;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/plugin-as-extern-crate.rs:7:9
   |
LL | #![deny(plugin_as_library)]
   |         ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

